--- a/code/API_definitions/sim-swap-notification-subscription.yaml
+++ b/code/API_definitions/sim-swap-notification-subscription.yaml
@@ -1101,7 +1101,7 @@ components:
         specversion: "1.0"
         datacontenttype: application/json
         data:
-          phoneNumber: +123456788
+          phoneNumber: "+123456788"
           subscriptionId: 2ghy-55gg-7iup-yuo9
         time: 2023-01-18T13:18:23.682Z
 
@@ -1113,7 +1113,7 @@ components:
         specversion: "1.0"
         datacontenttype: application/json
         data:
-          phoneNumber: +123456789
+          phoneNumber: "+123456789"
           terminationReason: SUBSCRIPTION_EXPIRED
           subscriptionId: 2ghy-55gg-7iup-yuo9
           terminationDescription: subscription expire time reached
