fix: remove Event-typeEvent

--- a/code/API_definitions/sim-swap-subscriptions.yaml
+++ b/code/API_definitions/sim-swap-subscriptions.yaml
@@ -26,7 +26,7 @@ info:
 
     It is mandatory in the subscription to provide the event `types` subscribed are several are managed in this API.
 
-    Only one event ``types`` is managed for this API:
+    Only one  ``types`` is managed for this API:
       - ``org.camaraproject.sim-swap-subscriptions.v0.swapped`` - Event triggered when a sim swap occurs on the associated phoneNumber
 
 
@@ -677,12 +677,15 @@ components:
       format: date-time
       description: Timestamp of when the occurrence happened. Must adhere to RFC 3339.
       example: "2018-04-05T17:31:00Z"
-
-    Event-typeEvent:
-      description: event structure for event-type event
+     
+    EventSimSwap:
+      description: event structure for event sim swapped
       allOf:
         - $ref: "#/components/schemas/CloudEvent"
         - type: object
+          properties:
+            data:
+              $ref: "#/components/schemas/Swapped"
 
     EventSubscriptionEnds:
       description: event structure for event subscription ends
@@ -692,15 +695,6 @@ components:
           properties:
             data:
               $ref: "#/components/schemas/SubscriptionEnds"
-
-    EventSimSwap:
-      description: event structure for event sim swapped
-      allOf:
-        - $ref: "#/components/schemas/CloudEvent"
-        - type: object
-          properties:
-            data:
-              $ref: "#/components/schemas/Swapped"
 
     Swapped:
       description: Event detail structure for ROAMING_ON & ROAMING_OFF event
