--- a/code/API_definitions/sim-swap-subscriptions.yaml
+++ b/code/API_definitions/sim-swap-subscriptions.yaml
@@ -1307,7 +1307,7 @@ components:
         types:
           - org.camaraproject.sim-swap-subscriptions.v0.swapped
         config:
-          subscriptionDetail:
+          subscriptionDetail: null
           subscriptionExpireTime: '2025-01-17T13:18:23.682Z'
     SUBSCRIPTION_RESPONSE:
       value:
@@ -1330,7 +1330,7 @@ components:
         types:
           - org.camaraproject.sim-swap-subscriptions.v0.swapped
         config:
-          subscriptionDetail:
+          subscriptionDetail: null
           subscriptionExpireTime: '2025-01-17T13:18:23.682Z'
         id: '1119920371'
         startsAt: '2024-06-07T16:10:15.302Z'
@@ -1357,7 +1357,7 @@ components:
           types:
             - org.camaraproject.sim-swap-subscriptions.v0.swapped
           config:
-            subscriptionDetail:
+            subscriptionDetail: null
             subscriptionExpireTime: '2025-01-17T13:18:23.682Z'
           id: '1119920371'
           startsAt: '2024-06-07T16:10:15.302Z'
