Clarify in API presence of phoneNumber in 2 or 3 legs
Clarify in API presence of phoneNumber in 2 or 3 legs

--- a/code/API_definitions/sim-swap-subscriptions.yaml
+++ b/code/API_definitions/sim-swap-subscriptions.yaml
@@ -51,9 +51,8 @@ info:
       #### phoneNumber presence:
       These rules apply for subscription:
 
-      - If 3-legged access token is used, the POST and GET responses must not provide any device identifier (``phoneNumber``).
-      - If 2-legged access token is used, the presence of a device identifier (``phoneNumber``) in the response is mandatory and should be
-       the same identifier type than the one provided in the request.
+      - If 3-legged access token is used, the POST and GET{id} requests & responses must not provide any device identifier (``phoneNumber``). For GET (list) only subscription(s) for this exactly phone number is/are retrieved (implicit filtering).
+      - If 2-legged access token is used, for POST and GET{id}, the presence of a device identifier (``phoneNumber``) in the request & response is mandatory. For GET (list) the device identifier (``phoneNumber``) could be used as filtering criteria.
 
       #### sinkCredential presence:
 
