--- a/code/API_definitions/sim-swap-subscriptions.yaml
+++ b/code/API_definitions/sim-swap-subscriptions.yaml
@@ -61,14 +61,14 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: wip
-  x-camara-commonalities: 0.4.0
+  version: 0.2.0-rc.1
+  x-camara-commonalities: 0.5
 
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
 servers:
-  - url: '{apiRoot}/sim-swap-subscriptions/vwip'
+  - url: '{apiRoot}/sim-swap-subscriptions/v0.2rc1'
     variables:
       apiRoot:
         default: http://localhost:9091
